--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -8,6 +8,6 @@
     <body>
         <h1>We are running a maintenance now.</h1>
 
-        <a href="/">Click here when we are back</a>
+        <a href="/">Click here when we are back.</a>
     </body>
 </html>
